updated at: 2023-10-21 19:57, 【個人商用ライセンス版】ドロレス・レイズ - 黒柚式のソレ - BOOTH

--- a/VRChat/50/1157350.html
+++ b/VRChat/50/1157350.html
@@ -7,7 +7,7 @@
       【個人商用ライセンス版】ドロレス・レイズ - 黒柚式のソレ - BOOTH
     </title>
     <meta name="description" content=
-    "【重要】通常版、UPG版販売終了のお知らせ https://fantia.jp/posts/1015024 【重要】通常版、UPG版公開終了のお知らせ https://fantia.jp/posts/1486801 ※上記公開終了に伴い、当商品は2022年末をもってサポート終了となります。ご了承ください。 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。">
+    "【重要】通常版、UPG版販売終了のお知らせ https://fantia.jp/posts/1015024 【重要】通常版、UPG版公開終了のお知らせ https://fantia.jp/posts/1486801 ※上記公開終了に伴い、当商品は2022年末をもってサポート終了となります。ご了承ください。 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1157350">
@@ -16,14 +16,14 @@
     <meta name="twitter:title" content=
     "【個人商用ライセンス版】ドロレス・レイズ - 黒柚式のソレ - BOOTH">
     <meta name="twitter:description" content=
-    "【重要】通常版、UPG版販売終了のお知らせ https://fantia.jp/posts/1015024 【重要】通常版、UPG版公開終了のお知らせ https://fantia.jp/posts/1486801 ※上記公開終了に伴い、当商品は2022年末をもってサポート終了となります。ご了承ください。 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。">
+    "【重要】通常版、UPG版販売終了のお知らせ https://fantia.jp/posts/1015024 【重要】通常版、UPG版公開終了のお知らせ https://fantia.jp/posts/1486801 ※上記公開終了に伴い、当商品は2022年末をもってサポート終了となります。ご了承ください。 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/1157350/a0802cb7-3826-423c-a0c5-f60ac0c7bb49_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【個人商用ライセンス版】ドロレス・レイズ - 黒柚式のソレ - BOOTH">
     <meta property="og:description" content=
-    "【重要】通常版、UPG版販売終了のお知らせ https://fantia.jp/posts/1015024 【重要】通常版、UPG版公開終了のお知らせ https://fantia.jp/posts/1486801 ※上記公開終了に伴い、当商品は2022年末をもってサポート終了となります。ご了承ください。 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。">
+    "【重要】通常版、UPG版販売終了のお知らせ https://fantia.jp/posts/1015024 【重要】通常版、UPG版公開終了のお知らせ https://fantia.jp/posts/1486801 ※上記公開終了に伴い、当商品は2022年末をもってサポート終了となります。ご了承ください。 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/1157350/a0802cb7-3826-423c-a0c5-f60ac0c7bb49_base_resized.jpg">
     <meta property="og:url" content=
@@ -81,9 +81,9 @@
     <script src=
     "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
     "defer" nonce=
-    "MiHYgrXDbhpFKQv+TZbjEzU/ItvUzli3rmfgk0bZiqU="></script>
+    "bk9H9p+l6PE4YUwgSYLx7RIuEP+879PtesMFMDBKM7w="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"【個人商用ライセンス版】ドロレス・レイズ","description":"【重要】通常版、UPG版販売終了のお知らせ\nhttps://fantia.jp/posts/1015024\n\n【重要】通常版、UPG版公開終了のお知らせ\nhttps://fantia.jp/posts/1486801\n\n※上記公開終了に伴い、当商品は2022年末をもってサポート終了となります。ご了承ください。\n\n━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n利用規約にご同意いただける方のみご購入ください。\nまた、日本語以外でのご質問にはお答えしかねます。ご了承ください。\n\nこのキャラクターはフィクションです。実在の人物や団体などとは関係ありません。\nまた、キャラクターの設定を推奨・強制するものではありません。\n\n日本国外のサイトで販売されているものは非正規品です。\nマルウェアが含まれる可能性があるので購入しないでください。\nThose sold at sites outside of Japan are non-genuine.\nDo not purchase as it may contain malware.\n在日本以外的地方销售的产品是非正品的。\n不要购买，因为它可能包含恶意软件。\n일본 외 사이트에서 판매/배포되는 것은 정품이 아닙니다. 랜섬웨어 혹은 멀웨어 등의 악성 코드가 포함되어 있을 수 있으므로 구입하지 마세요.","url":"https://booth.pm/ja/items/1157350","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/1157350/a0802cb7-3826-423c-a0c5-f60ac0c7bb49_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【個人商用ライセンス版】ドロレス・レイズ","description":"【重要】通常版、UPG版販売終了のお知らせ\nhttps://fantia.jp/posts/1015024\n\n【重要】通常版、UPG版公開終了のお知らせ\nhttps://fantia.jp/posts/1486801\n\n※上記公開終了に伴い、当商品は2022年末をもってサポート終了となります。ご了承ください。\n\n━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n利用規約にご同意いただける方のみご購入ください。\nまた、日本語以外でのご質問にはお答えしかねます。ご了承ください。\n\n商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。\nまた、商品のデータは日本語版Windowsで使用する事を想定し動作確認をしています。それ以外のOSではファイルを正常に扱えない場合があります。ご了承ください。\n\nこのキャラクターはフィクションです。実在の人物や団体などとは関係ありません。\nまた、キャラクターの設定を推奨・強制するものではありません。\n\n日本国外のサイトで販売されているものは非正規品です。\nマルウェアが含まれる可能性があるので購入しないでください。\nThose sold at sites outside of Japan are non-genuine.\nDo not purchase as it may contain malware.\n在日本以外的地方销售的产品是非正品的。\n不要购买，因为它可能包含恶意软件。\n일본 외 사이트에서 판매/배포되는 것은 정품이 아닙니다. 랜섬웨어 혹은 멀웨어 등의 악성 코드가 포함되어 있을 수 있으므로 구입하지 마세요.","url":"https://booth.pm/ja/items/1157350","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/1157350/a0802cb7-3826-423c-a0c5-f60ac0c7bb49_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -400,6 +400,8 @@
                             ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
                             利用規約にご同意いただける方のみご購入ください。
                             また、日本語以外でのご質問にはお答えしかねます。ご了承ください。
+                            商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。
+                            また、商品のデータは日本語版Windowsで使用する事を想定し動作確認をしています。それ以外のOSではファイルを正常に扱えない場合があります。ご了承ください。
                             このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。
                             また、キャラクターの設定を推奨・強制するものではありません。
                             日本国外のサイトで販売されているものは非正規品です。
@@ -454,6 +456,7 @@
                               ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
                               バーチャルキャスト（https://virtualcast.jp/）などでご利用いただけます。
                               動作軽量化のためにPMX版からポリゴンやボーン、モーフを削減してあります。
+                              VRM形式のバージョンは0.xです。
                               利用に関する細かい規定は下記ページをご覧ください。
                               http://black-yuzunyan.lolipop.jp/mmd_models_acceptable_use_policy
                               ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
