--- a/VRChat/27/1130227.html
+++ b/VRChat/27/1130227.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      [VRChat]ちょっと良さげな剣[BroadSword] - メイドの手芸屋 - BOOTH
+      [VRChat]ちょっと良さげな剣[BroadSword] - 怠岩CG - BOOTH
     </title>
     <meta name="description" content=
     "なんか良さげな剣です 剣△488 鞘△242 2048テクスチャ3枚（Albedo,Metal,Normal）とそれぞれのobjデータが入ってます スタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。 スケールはキャラやシーンに合わせてください。 -------------------------------------------------------- 更新 2018/12/16 持ち手細かったのでちょっと太くしました">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "[VRChat]ちょっと良さげな剣[BroadSword] - メイドの手芸屋 - BOOTH">
+    "[VRChat]ちょっと良さげな剣[BroadSword] - 怠岩CG - BOOTH">
     <meta name="twitter:description" content=
     "なんか良さげな剣です 剣△488 鞘△242 2048テクスチャ3枚（Albedo,Metal,Normal）とそれぞれのobjデータが入ってます スタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。 スケールはキャラやシーンに合わせてください。 -------------------------------------------------------- 更新 2018/12/16 持ち手細かったのでちょっと太くしました">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/29cbdbe7-d2fb-463e-9d1e-cb8f1e92083e/i/1130227/f6efa7bc-e0c3-47a3-aac7-c89c7dd3d9d5_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "[VRChat]ちょっと良さげな剣[BroadSword] - メイドの手芸屋 - BOOTH">
+    "[VRChat]ちょっと良さげな剣[BroadSword] - 怠岩CG - BOOTH">
     <meta property="og:description" content=
     "なんか良さげな剣です 剣△488 鞘△242 2048テクスチャ3枚（Albedo,Metal,Normal）とそれぞれのobjデータが入ってます スタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。 スケールはキャラやシーンに合わせてください。 -------------------------------------------------------- 更新 2018/12/16 持ち手細かったのでちょっと太くしました">
     <meta property="og:image" content=
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
     "defer" nonce=
-    "MWcGYgEVadff962aej2EIvPS2+Y4N7reXa29wIRqn00="></script>
+    "H7n2Hl+4uv7n6Iw2BoOi+eqWBDZlysIU0UN0XyfP/M8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat]ちょっと良さげな剣[BroadSword]","description":"なんか良さげな剣です\n剣△488\n鞘△242\n\n2048テクスチャ3枚（Albedo,Metal,Normal）とそれぞれのobjデータが入ってます\n\nスタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。\nスケールはキャラやシーンに合わせてください。\n\n--------------------------------------------------------\n更新\n2018/12/16\n持ち手細かったのでちょっと太くしました","url":"https://booth.pm/ja/items/1130227","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/29cbdbe7-d2fb-463e-9d1e-cb8f1e92083e/i/1130227/f6efa7bc-e0c3-47a3-aac7-c89c7dd3d9d5_base_resized.jpg"}
     </script>
@@ -177,9 +177,9 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://vrcrock.booth.pm/"><img alt=
-                            "メイドの手芸屋" class=
+                            "怠岩CG" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5731716/icon_image/4772a607-8862-4d58-94a3-fc2c54164dc2_base_resized.jpg">メイドの手芸屋</a>
+                            "https://booth.pximg.net/c/48x48/users/5731716/icon_image/4f1b6fc7-415a-40c7-b8e3-494ce90a3623_base_resized.jpg">怠岩CG</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               [VRChat]ちょっと良さげな剣[BroadSword]
@@ -611,7 +611,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;}]"
+    "[{&quot;label&quot;:&quot;SC2023 Autumn&quot;,&quot;value&quot;:&quot;sc2023autumn&quot;},{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
