updated at: 2023-10-23 19:39, 【サポート終了】オリジナル3Dモデル　NEXIE - クロワッサン直売所 - BOOTH

--- a/VRChat/57/934957.html
+++ b/VRChat/57/934957.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
+    "https://asset.booth.pm/assets/14f10d23ffa1b8daf619.js" defer=
     "defer" nonce=
-    "Yvbi3sP2dXIQ1ORUIhalu7VRT8RlHFVtO4Z3im010fQ="></script>
+    "RCn+YM/CUfXb9Dcx1RCiejmznU4MkxZsAjysgH6zocU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【サポート終了】オリジナル3Dモデル　NEXIE","description":"◆◇VRアバター向けオリジナル3Dモデル『NEXIE(ネキシィ)ver6.0』紹介文◇◆\n\n※最新の環境でファイルが正常に動作するか保証できません。\nSdk3.0、PBには対応していません。設定済みプレハブも入っていません。その他諸々のセッティングをご自身で出来る方のみご購入ください。\nNFTの発行を禁止します。\n\n■このモデル『NEXIE(ネキシィ)』はVRchatでの使用を想定して制作されたVRアバター向けの3Dモデルです。\n\n\n\n　営利目的での使用は可能です。\n\n　3Dモデルのファイルはfbx,blend,unitypackage形式、その他いくつかの資料（テクスチャや説明書など）をご用意しています。\n\n\n■改変可能です。\n\n　ヒューマノイドボーンのモデルです。\n\n  フルトラッキングでの正常な動作確認済みです。\n\n　リップシンクはVRchatに必要な15種類のリップシンクをご用意しております。\n\n\n■禁止事項\n\n 『NEXIE』とその付属のモデルデータ・テクスチャーデータの再配付・販売は改変の有無を問わず禁止します。\n\n\n■ダウンロードされましたら、まずreadmeに目を通してください。\n\n\n\n\nバージョンアップ情報＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n\n2.0　：ダイナミックボーンなどの揺れものに対応\n　　　 ハンマー追加\n2.1　：ウェイトの塗り残し修正\n3.0　：ポリゴン削減　\n　　　 袖修正\n　　　 飾り多めモデル追加\n3.0.1：肘修正\n4.0  ：首輪修正\n　　　 腕時計追加\n       袖修正\n4.0.3：耳尻尾の動き追加\n5.0　：髪の毛のテクスチャ改良\n　　   ブーツ変更\n6.0　：口内追加\n　　　 表情モーフ追加\u0026作り直し\n　　 　装備を取り外し式に変更\n　　 　不要だとみなした装備品撤去\n      マテリアル数テクスチャ数削減","url":"https://booth.pm/ja/items/934957","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b741927d-7967-46e1-905d-78b9949c6df9/i/934957/11df70e8-7ad4-4797-b7cc-f6fb400a6e29_base_resized.jpg"}
     </script>
@@ -143,7 +143,7 @@
                             "https://kurowasa.booth.pm/"><img alt=
                             "クロワッサン直売所" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/3781109/icon_image/3da723cf-a2cb-453f-8246-4a7ffe974459_base_resized.jpg">クロワッサン直売所</a>
+                            "https://booth.pximg.net/c/48x48/users/3781109/icon_image/cee6f2ed-c030-452e-a508-659dc5778dcc_base_resized.jpg">クロワッサン直売所</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【サポート終了】オリジナル3Dモデル　NEXIE
@@ -591,7 +591,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;}]"
+    "[{&quot;label&quot;:&quot;SC2023 Autumn&quot;,&quot;value&quot;:&quot;sc2023autumn&quot;},{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
