--- a/VRChat/55/1335155.html
+++ b/VRChat/55/1335155.html
@@ -27,5 +27,8 @@
         5秒後に<a href="/">BOOTH</a>に移動します。
       </p>
     </div>
+    <script nonce="DJu3++NXe/T4rHpL2feoaQPzorAkHDZrunFQHN+4yfw=">
+    (function(){var js = "window['__CF$cv$params']={r:'81b91aff4cc18a5a',t:'MTY5ODIyMjcwOS42OTAwMDA='};_cpo=document.createElement('script');_cpo.nonce='DJu3++NXe/T4rHpL2feoaQPzorAkHDZrunFQHN+4yfw=',_cpo.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.nonce = 'DJu3++NXe/T4rHpL2feoaQPzorAkHDZrunFQHN+4yfw=';_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();
+    </script>
   </body>
 </html>
